2009-03-27  John Abd-El-Malek  <jam@google.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24836
        Fix navigator.plugins.refresh(false) in Chromium.

        * plugins/chromium/PluginDataChromium.cpp:
        (WebCore::PluginData::refresh):



git-svn-id: svn://svn.chromium.org/blink/trunk@42052 bbb929c8-8fbe-4397-9dbb-9b2b20218538