third_party/WebKit/WebCore/plugins/chromium/PluginDataChromium.cpp
@@ -96,6 +96,7 @@ void PluginData::initPlugins()
 void PluginData::refresh()
 {
     pluginCache.reset(true);
+    pluginCache.plugins();  // Force the plugins to be reloaded now.
 }
 
 String getPluginMimeTypeFromExtension(const String& extension)
